Bug 206402 - Setting kVTCompressionPropertyKey_DataRateLimits on RTCVideoEncoderH264 fails
Summary: Setting kVTCompressionPropertyKey_DataRateLimits on RTCVideoEncoderH264 fails
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebRTC (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: youenn fablet
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2020-01-17 00:19 PST by youenn fablet
Modified: 2020-01-20 01:45 PST (History)
9 users (show)

See Also:


Attachments
Patch (3.19 KB, patch)
2020-01-17 00:21 PST, youenn fablet
no flags Details | Formatted Diff | Diff
Patch for landing (3.22 KB, patch)
2020-01-20 00:41 PST, youenn fablet
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description youenn fablet 2020-01-17 00:19:19 PST
Setting kVTCompressionPropertyKey_DataRateLimits on RTCVideoEncoderH264 fails
Comment 1 youenn fablet 2020-01-17 00:21:08 PST
Created attachment 388017 [details]
Patch
Comment 2 Eric Carlson 2020-01-17 09:00:24 PST
Comment on attachment 388017 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=388017&action=review

> Source/ThirdParty/libwebrtc/Source/webrtc/sdk/objc/components/video_codec/helpers.cc:134
> +    RTC_LOG(LS_ERROR) << "VTSessionSetProperty failed to set: " << key_string

it might be worth also logging 'vtSession' so we know which call was made
Comment 3 youenn fablet 2020-01-20 00:41:11 PST
Created attachment 388213 [details]
Patch for landing
Comment 4 WebKit Commit Bot 2020-01-20 01:44:08 PST
The commit-queue encountered the following flaky tests while processing attachment 388213 [details]:

editing/spelling/spellcheck-attribute.html bug 206178 (authors: g.czajkowski@samsung.com, mark.lam@apple.com, and rniwa@webkit.org)
The commit-queue is continuing to process your patch.
Comment 5 WebKit Commit Bot 2020-01-20 01:44:38 PST
Comment on attachment 388213 [details]
Patch for landing

Clearing flags on attachment: 388213

Committed r254815: <https://trac.webkit.org/changeset/254815>
Comment 6 WebKit Commit Bot 2020-01-20 01:44:40 PST
All reviewed patches have been landed.  Closing bug.
Comment 7 Radar WebKit Bug Importer 2020-01-20 01:45:17 PST
<rdar://problem/58733419>