Setting kVTCompressionPropertyKey_DataRateLimits on RTCVideoEncoderH264 fails https://bugs.webkit.org/show_bug.cgi?id=206402

Reviewed by Eric Carlson.

Add helper routine dedicated to setting VTB/VCP array value properties.
Logging shows the bitrate is then set appropriately.

* Source/webrtc/sdk/objc/components/video_codec/helpers.cc:
* Source/webrtc/sdk/objc/components/video_codec/helpers.h:


Canonical link: https://commits.webkit.org/219553@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254815 268f45cc-cd09-0410-ab3c-d52691b4dbfc